<resources>
    <string name="app_name">Subasta</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="menu_access">Acceder o Registrarse</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_account">Mi cuenta</string>
    <string name="menu_payment">Metodos de pago</string>
    <string name="menu_article">Mis articulos</string>
    <string name="menu_bid">Mis pujas</string>
    <string name="menu_statistic">Mis estadísticas</string>

    <string name="login">Login</string>
    <string name="register">Registrarse</string>
    <string name="generate">Generar</string>
    <string name="validate">Validar</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="access">Acceder</string>
    <string name="save">Guardar</string>
    <string name="validate_user">Validar usuario</string>
    <string name="agregar_nuevo">Agregar nuevo</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user">Usuario</string>
    <string name="clave">Clave</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="dni">Documento</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="verification">Código de verificación</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="account_number">Número de Cuenta</string>

    <string name="date">        Fecha</string>
    <string name="category">    Categoría</string>
    <string name="auctioneer">  Subastador</string>
    <string name="items_amount">Cantidad de Artículos</string>
    <string name="description"> Descripción</string>


    <string name="input_name">Ingresar nombre</string>
    <string name="input_surname">Ingresar apellido</string>
    <string name="input_email">Ingresar email</string>
    <string name="input_dni">Ingresar documento</string>
    <string name="input_address">Ingresar dirección</string>
    <string name="input_phone">Ingresar teléfono</string>
    <string name="input_clave">Ingresar clave</string>
    <string name="input_re_clave">Reingrese clave</string>
    <string name="input_verification">Ingresar verificación</string>

    <string name="my_data">Mis Datos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
